--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -69,5 +69,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }},${{ env.REGISTRY }}/${{ github.repository }}:${{ github.run_number }} #details: https://github.com/docker/build-push-action/issues/160
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest,${{ env.REGISTRY }}/${{ github.repository }}:${{ github.run_number }} #details: https://github.com/docker/build-push-action/issues/160
           labels: ${{ steps.meta.outputs.labels }}
